<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KlpCommonUtils</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="fix_chinese">Only Chinese Title Shortcut</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="del_shortcut">Delete Shortcut</string>
    <string name="check_shortcut">Check If Shortcut Exist</string>
    
	<string name="add_db">AddToDB</string>
    <string name="delete_db">DeleteDB</string>
    <string name="update_db">ModifyDB</string>
    <string name="query_db">QueryDB</string>  
    
    <string name="network_error_retry">Network error, Please retry</string>  
    <string name="no_network">No network</string>
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="in_progress">In Progress</string>
    
    <string name="start_listen">Start Listener(It will listen network disconnected event for 5 seconds)</string>
    <string name="stop_listen_time_out">Stop listener because time out!</string>
    <string name="stop_listen_success">Stop listener because network disconnected!</string>
</resources>
