<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.klpchan.commonutils.widget.WebViewPager
        android:id="@+id/sed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:focusableInTouchMode="false"
        />

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="56dp"
            android:layout_marginStart="56dp"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:indeterminateTint="#acacac"
                android:indeterminateTintMode="src_in"
                style="@android:style/Widget.DeviceDefault.ProgressBar"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/loading"
                android:textColor="#b5b5b5"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/retryLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="56dp"
            android:layout_marginStart="56dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:contentDescription=""
                android:src="@drawable/ic_no_network"/>


            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/no_network"
                android:textColor="#b5b5b5"/>

            <Button
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="29dp"
                android:paddingRight="29dp"
                android:text="@string/retry"/>

        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="29dp"
        android:paddingRight="29dp"
        android:visibility="gone"
        android:text="@string/retry"/>
</RelativeLayout>